# qtlearn

Guitar/: CMakeLists.txt  Main.qml  main.cpp
SolutionProject/: CMakeLists.txt  Main.qml
StartingProject/: CMakeLists.txt  Main.qml
StartingProjectTap/: CMakeLists.txt  Main.qml  main.cpp
